--- a/roshask.cabal
+++ b/roshask.cabal
@@ -97,7 +97,7 @@ Library
     Build-depends:
                        
   else
-    Build-depends:     network >= 2.6
+    Build-depends:     network >= 2.6, uri >= 0.1.5, filemanip > 0.3.6, haxr >= 3000.11.1, xml >= 1.3.5
 
   -- Packages needed in order to build this package.
   Build-depends:       base >= 4.5 && < 6, time-out, time-units,
@@ -117,14 +117,10 @@ Library
                        snap-server >= 0.9,
                        storable-tuple >= 0.0.2,
                        transformers >= 0.4,
-                       haxr >= 3000.11.1,
                        utf8-string >= 0.3.6,
-                       uri >= 0.1.5,
                        vector-space,
-                       filemanip > 0.3.6,
                        vector >= 0.10,
                        filepath > 1.1,
-                       xml >= 1.3.5,
                        directory > 1.0
 
   if !os(windows)
