--- a/roshask.cabal
+++ b/roshask.cabal
@@ -97,7 +97,7 @@ Library
     Build-depends:
                        
   else
-    Build-depends:     network >= 2.6, uri >= 0.1.5, filemanip > 0.3.6, haxr >= 3000.11.1, xml >= 1.3.5
+    Build-depends:     network >= 2.6, uri >= 0.1.5, filemanip > 0.3.6, haxr >= 3000.11.1, xml >= 1.3.5, snap-core >= 0.9, snap-server >= 0.9
 
   -- Packages needed in order to build this package.
   Build-depends:       base >= 4.5 && < 6, time-out, time-units,
@@ -113,8 +113,6 @@ Library
                        parsec >= 3.1,
                        process >= 1.0.1.3,
                        SafeSemaphore,
-                       snap-core >= 0.9,
-                       snap-server >= 0.9,
                        storable-tuple >= 0.0.2,
                        transformers >= 0.4,
                        utf8-string >= 0.3.6,
