--- a/roshask.cabal
+++ b/roshask.cabal
@@ -69,7 +69,6 @@ Library
                        Ros.Topic.Stamped
                        Ros.Topic.Arrow
                        Ros.Rate
-                       Ros.Internal.DepFinder
                        Ros.Internal.Msg.MsgInfo
                        Ros.Internal.Msg.SrvInfo
                        Ros.Internal.Msg.HeaderSupport
@@ -78,8 +77,6 @@ Library
                        Ros.Internal.RosTime
                        Ros.Internal.RosTypes
                        Ros.Internal.RosBinary
-                       Ros.Internal.SetupUtil
-                       Ros.Internal.PathUtil
                        Ros.Util.PID
                        Ros.Service
                        Ros.Service.ServiceTypes
@@ -98,6 +95,10 @@ Library
                        
   else
     Build-depends:     network >= 2.6, uri >= 0.1.5, filemanip > 0.3.6, haxr >= 3000.11.1, xml >= 1.3.5, snap-core >= 0.9, snap-server >= 0.9
+    Exposed-modules:
+                       Ros.Internal.DepFinder
+                       Ros.Internal.SetupUtil
+                       Ros.Internal.PathUtil
 
   -- Packages needed in order to build this package.
   Build-depends:       base >= 4.5 && < 6, time-out, time-units,
