--- a/roshask.cabal
+++ b/roshask.cabal
@@ -86,7 +86,6 @@ Library
     Exposed-modules:   Ros.Logging
     Other-modules:     Ros.Internal.Log
                        Ros.Internal.Header
---                       Ros.Node.RosTcp
     Build-depends:     template-haskell
 
   if impl(ghcjs)
@@ -102,6 +101,7 @@ Library
     Other-modules:     Ros.Graph.Master
                        Ros.Graph.Slave
                        Ros.Graph.ParameterServer
+                       Ros.Node.RosTcp
 
   -- Packages needed in order to build this package.
   Build-depends:       base >= 4.5 && < 6, time-out, time-units,
