--- a/roshask.cabal
+++ b/roshask.cabal
@@ -92,7 +92,7 @@ Library
     Build-depends:
                        
   else
-    Build-depends:     network >= 2.6, uri >= 0.1.5, filemanip > 0.3.6, haxr >= 3000.11.1, xml >= 1.3.5, snap-core >= 0.9, snap-server >= 0.9
+    Build-depends:     network >= 2.6, uri >= 0.1.5, filemanip > 0.3.6, haxr >= 3000.11.1, xml >= 1.3.5, snap-core >= 0.9, snap-server >= 0.9, process >= 1.0.1.3
     Exposed-modules:
                        Ros.Internal.DepFinder
                        Ros.Internal.SetupUtil
@@ -115,7 +115,6 @@ Library
                        time >= 1.1,
                        BoundedChan >= 1.0.0.2,
                        parsec >= 3.1,
-                       process >= 1.0.1.3,
                        SafeSemaphore,
                        storable-tuple >= 0.0.2,
                        transformers >= 0.4,
