--- a/roshask.cabal
+++ b/roshask.cabal
@@ -92,7 +92,7 @@ Library
     Build-depends:
                        
   else
-    Build-depends:     network >= 2.6, uri >= 0.1.5, filemanip > 0.3.6, haxr >= 3000.11.1, xml >= 1.3.5, snap-core >= 0.9, snap-server >= 0.9, process >= 1.0.1.3
+    Build-depends:     network >= 2.6, uri >= 0.1.5, filemanip > 0.3.6, haxr >= 3000.11.1, xml >= 1.3.5, snap-core >= 0.9, snap-server >= 0.9, process >= 1.0.1.3, directory > 1.0
     Exposed-modules:
                        Ros.Internal.DepFinder
                        Ros.Internal.SetupUtil
@@ -122,7 +122,6 @@ Library
                        vector-space,
                        vector >= 0.10,
                        filepath > 1.1,
-                       directory > 1.0
 
   if !os(windows)
     Build-depends: unix
